@@ -31,6 +31,7 @@ Current Devel
 	- API: Added event_chgident() and event_chghost()
 	- operserv/modunload: Unload all modules of that service if the main module is unloaded.
 	- API: Added fantasy() for enabling fantasy on a ChanServ command.
+	- Protocols: Added serv_netban() for setting network bans.
 
 1.0.0-alpha2
 	- HostServ: Update hostserv/main to match the updated API.
